# vaani

./: .env.example  .env.poc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLANS.md  PROGRESS.md  docker-compose.poc.yml  docker-compose.yml  git-operator.skill  install-git-operator-claude.sh  package-lock.json  package.json  pyproject.toml  quality-baseline.json  quality-baseline.poc.json  setup_db.sh
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  reusable-node-app.yml  reusable-python-api.yml  security.yml
app/: app.json  eslint.config.js  jest.config.js  package-lock.json  package.json
app/src/: config.test.ts  config.ts  featureFlags.test.ts  featureFlags.ts  theme.ts
docs/adr/: 0001-intelligent-archetype-router.md  0002-profession-buckets-real-vs-mapped.md
docs/plans/: poc-01-audio-lab-plan.md  poc-04-difficult-conv-plan.md  poc-05-founder-oneonone-plan.md  poc-05-founder-oneonone-progress.md  poc-06-listening-gym-plan.md  poc-06-listening-gym-progress.md  poc-07-sales-objection-plan.md  poc-07-sales-objection-progress.md  poc-08-interview-plan.md  poc-09-manager-feedback-plan.md  poc-10-investor-pitch-plan.md  poc-11-debate-plan.md  poc-12-ted-story-plan.md  poc-13-teacher-explain-plan.md  poc-14-highspeed-qa-plan.md  poc-15-podcast-coach-plan.md  poc-16-emotion-lab-plan.md  poc-16-emotion-lab-progress.md  poc-17-filler-detox-plan.md  poc-17-filler-detox-progress.md  poc-18-pause-gym-plan.md  poc-18-pause-gym-progress.md  poc-19-human-vs-ai-plan.md  poc-19-human-vs-ai-progress.md  poc-personas-plan.md  (+5 more)
schemas/: candidate_speakers.json  capability_taxonomy.json  evidence_items.json  extraction_runs.json  media_assets.json  practice_drills.json  profession_taxonomy.json  sources.json  speaker_scores.json  speakers.json  speeches.json  transcripts.json
scripts/: git_commit.py
seed/: capability_taxonomy.json  profession_taxonomy.json  speakers_100.json
tests/: conftest.py
(+197 files in other folders)
